[#17232] CMake: Allow user to pass the directory of LLVM-C.dll

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,28 +72,33 @@ elseif(CMAKE_HOST_WIN32)
 	set(LLVM-C_PATH         ${LLVM-C_DIR}/LLVM-C.dll)
 
 	if(NOT EXISTS ${LLVM-C_PATH})
-		message("Necessary LLVM library not found...")
-
-		find_program(7ZIP 7z HINTS "C:/Program Files/7-Zip/")
-		if(${7ZIP} EQUAL "7ZIP-NOTFOUND")
-			message(FATAL_ERROR "7-zip not found! It is required to extract LLVM-C.dll from LLVM installer.\n7z.exe can be pointed to by adding -D7ZIP=\"<path>\" (e.g. -D7ZIP=\"C:/Program Files/7-Zip/7z.exe\") while invoking CMake.")
-		endif()
-
-		set(LLVM_EXE_PATH  ${CMAKE_SOURCE_DIR}/lib/llvm-${LLVM_VERSION}-win64.exe)
-		if(NOT EXISTS ${LLVM_EXE_PATH})
-			message("Downloading LLVM...")
-			file(DOWNLOAD http://releases.llvm.org/${LLVM_VERSION}/LLVM-${LLVM_VERSION}-win64.exe ${LLVM_EXE_PATH} SHOW_PROGRESS)
+		if(EXISTS ${LLVM-C_USERDIR}/LLVM-C.dll)
+			message("Found existing LLVM-C.dll library in ${LLVM-C_USERDIR}, copying it to ${LLVM-C_DIR}...")
+			file(COPY ${LLVM-C_USERDIR}/LLVM-C.dll DESTINATION ${LLVM-C_DIR})
 		else()
-			message("Unpacking LLVM from a previously downloaded ${LLVM_EXE_PATH}")
-		endif()
+			message("Necessary LLVM-C.dll library not found... the -DLLVM-C_USERDIR=\"C:/.../\" switch can be used to specify the directory containing it.")
 
-		message("Unpacking LLVM library...")
-		execute_process(COMMAND ${7ZIP} e ${LLVM_EXE_PATH} bin/LLVM-C.dll WORKING_DIRECTORY ${LLVM-C_DIR})
+			find_program(7ZIP 7z HINTS "C:/Program Files/7-Zip/")
+			if(${7ZIP} EQUAL "7ZIP-NOTFOUND")
+				message(FATAL_ERROR "7-zip not found! It is required to extract LLVM-C.dll from LLVM installer.\n7z.exe can be pointed to by adding -D7ZIP=\"<path>\" (e.g. -D7ZIP=\"C:/Program Files/7-Zip/7z.exe\") while invoking CMake.")
+			endif()
 
-		if(EXISTS ${LLVM-C_PATH})
-			file(REMOVE ${LLVM_EXE_PATH})
-		else()
-			message(FATAL_ERROR "Problem occured while extracting LLVM-C.dll library out of the LLVM installer!")
+			set(LLVM_EXE_PATH  ${CMAKE_SOURCE_DIR}/lib/llvm-${LLVM_VERSION}-win64.exe)
+			if(NOT EXISTS ${LLVM_EXE_PATH})
+				message("Downloading LLVM...")
+				file(DOWNLOAD http://releases.llvm.org/${LLVM_VERSION}/LLVM-${LLVM_VERSION}-win64.exe ${LLVM_EXE_PATH} SHOW_PROGRESS)
+			else()
+				message("Unpacking LLVM from a previously downloaded ${LLVM_EXE_PATH}")
+			endif()
+
+			message("Unpacking LLVM library...")
+			execute_process(COMMAND ${7ZIP} e ${LLVM_EXE_PATH} bin/LLVM-C.dll WORKING_DIRECTORY ${LLVM-C_DIR})
+
+			if(EXISTS ${LLVM-C_PATH})
+				file(REMOVE ${LLVM_EXE_PATH})
+			else()
+				message(FATAL_ERROR "Problem occured while extracting LLVM-C.dll library out of the LLVM installer!")
+			endif()
 		endif()
 	else()
 		message("Using LLVM-C.dll from ${LLVM-C_PATH}")
