--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,10 +127,10 @@ endfunction(disas)
 
 set(ARCH riscv32 generic-rv32)
 disas(${ARCH} 1023002300020493 "mv\ts1, tp.*sb\tsp, 256\\(t1\\)")
-disas(${ARCH} 2049340848433 "sub\ts0, s1, s0.*mv\ts1, tp")
+disas(${ARCH} 0002049340848433 "sub\ts0, s1, s0.*mv\ts1, tp")
+disas(${ARCH} 2049340848433 "sub\ts0, s1, s0")
+disas(${ARCH} 40848433 "sub\ts0, s1, s0")
 
 set(ARCH thumb cortex-m4)
 disas(${ARCH} 0x0403f023440b43d1 "mvns\tr1, r2.*add\tr3, r1.*bic\tr4, r3, #3")
-# code is filled with zeros to make it 8B
-# 2B code: 0x0000 on ARM is "movs r0, r0"
-disas(${ARCH} 200f2c2 "movt\tr2, #8192.*movs\tr0, r0.*movs\tr0, r0")
+disas(${ARCH} 200f2c2 "movt\tr2, #8192")
