--- a/.ci.yml
+++ b/.ci.yml
@@ -8,7 +8,7 @@ build:
   script:
     - mkdir build
     - cd build
-    - cmake ..
+    - cmake -DCMAKE_BUILD_TYPE=Release ..
     - make VERBOSE=1
     - ctest -V
 
