--- a/.ci.yml
+++ b/.ci.yml
@@ -1,10 +1,4 @@
-image: debian:latest
-
-before_script:
-  - apt update
-  - apt install -y cmake g++ xz-utils
-
-build:
+.build_script: &build_script
   script:
     - mkdir shared
     - cd shared
@@ -18,6 +12,7 @@ build:
     - make VERBOSE=1
     - ctest -V
 
+.build_artifacts: &build_artifacts
   artifacts:
     paths:
       - shared/libllvm-disas.so
@@ -25,3 +20,11 @@ build:
       - static/libllvm-disas.a
       - static/test-app
     when: always
+
+linux:
+  image: debian:latest
+  before_script:
+    - apt update
+    - apt install -y cmake g++ xz-utils
+  <<: *build_script
+  <<: *build_artifacts
