[#24964] CMake: Make `test-app` use libraries from its runtime directory
This change makes `test-app` work without setting `LD_LIBRARY_PATH`. The
only requirement is having `libllvm-disas` in the same directory as
`test-app`. This is achieved by placing `$ORIGIN` in ELFs `RPATH`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ endif()
 
 add_executable(test-app test.c)
 target_link_libraries(test-app PRIVATE llvm-disas)
+# Search libraries in a runtime directory (ELFs `RPATH` is set to '$ORIGIN')
+set_target_properties(test-app PROPERTIES BUILD_RPATH_USE_ORIGIN TRUE)
 
 # Use "C++ linker" to link target as LLVM code is written in C++
 set_property(TARGET ${TARGET_LINKING_LLVM_LIBS} PROPERTY LINKER_LANGUAGE "CXX")
