--- a/.ci.yml
+++ b/.ci.yml
@@ -1,7 +1,11 @@
 .before_script: &before_script
   before_script:
+    # BUILD_RPATH_USE_ORIGIN is available since CMake 3.14 (unavailable in default repositories)
     - apt update
-    - apt install -y cmake g++$TOOLCHAIN_SUFFIX xz-utils
+    - apt install -y ca-certificates
+    - echo "deb https://deb.debian.org/debian buster-backports main" >>/etc/apt/sources.list
+    - apt update
+    - apt install -y cmake/buster-backports g++$TOOLCHAIN_SUFFIX xz-utils
 
 .build_script: &build_script
   script:
